--- a/artigo.ipynb
+++ b/artigo.ipynb
@@ -13,16 +13,28 @@
    "source": [
     "PDF of a censured observation $t$ is given by:\n",
     "\n",
-    "              exp(-(-exp(mu*t) + 1)*exp(a + beta*x + lambda*t)/\n",
-    "              (exp(lambda*t) - exp(t*(lambda + mu)) - 1))\n",
+    "              exp(\n",
+    "               p * rho * (-exp(mu*t) + 1) * exp(lambda*t)\n",
+    "               /\n",
+    "               (-exp(lambda * t) + exp(t * (lambda + mu)) + 1)\n",
+    "              )\n",
+    "\n",
     "\n",
     "PDF of a non-censured observation $t$ is given by:\n",
     "\n",
-    "              (-lambda + mu*(exp(lambda*t) - 1) + (lambda + mu) * \n",
-    "              (-exp(lambda*t) + exp(t*(lambda + mu)) + 1)) * \n",
-    "              exp(a + beta*x - (exp(mu*t) - 1)*exp(a + beta*x + lambda*t) /\n",
-    "              (-exp(lambda*t) + exp(t*(lambda + mu)) + 1)) /\n",
-    "              (-exp(lambda*t) + exp(t*(lambda + mu)) + 1)**2"
+    "              p * rho\n",
+    "              *\n",
+    "              (-lambda + mu*(exp(lambda*t) - 1) + (lambda + mu)*(-exp(lambda*t) + exp(t*(lambda + mu)) + 1))\n",
+    "              *\n",
+    "              exp(-p*rho*(exp(mu*t) - 1)*exp(lambda*t)/(-exp(lambda*t) + exp(t*(lambda + mu)) + 1))\n",
+    "              /\n",
+    "              (-exp(lambda*t) + exp(t*(lambda + mu)) + 1)**2\n",
+    "\n",
+    "With:\n",
+    "\n",
+    "              rho = exp(beta0)\n",
+    "              p = inv_logit(beta1 * x)\n",
+    "              lambda = exp(beta2 * x)"
    ]
   },
   {
@@ -58,11 +70,9 @@
     "\n",
     "t_obs <- db[db$status == 1, \"y\"]\n",
     "x1_obs <- db[db$status == 1, \"x1\"]\n",
-    "x2_obs <- db[db$status == 1, \"x2\"]\n",
     "\n",
     "t_cen <- db[db$status != 1, \"y\"]\n",
     "x1_cen <- db[db$status != 1, \"x1\"]\n",
-    "x2_cen <- db[db$status != 1, \"x2\"]\n",
     "\n",
     "n_obs <- length(t_obs)\n",
     "n_cen <- length(t_cen)\n",
@@ -582,7 +592,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.2"
+   "version": "3.4.1"
   }
  },
  "nbformat": 4,
